--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ classifiers = [
 
 ]
 dependencies = [
-    "tutor>=20.0.0,<21.0.0",
-    "tutor-mfe>=20.0.0,<21.0.0",
+    "tutor @ git+https://github.com/overhangio/tutor.git@ulmo",
+    "tutor-mfe @ git+https://github.com/overhangio/tutor-mfe.git@ulmo",
 ]
 
 # These fields will be set by hatch_build.py
@@ -38,7 +38,7 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = [
-    "tutor[dev]>=20.0.0,<21.0.0",
+    "tutor[dev] @ git+https://github.com/overhangio/tutor.git@ulmo",
     "ruff",
 ]
 
