--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,11 @@ notifications = "tutorplatformnotifications.plugin"
 
 [tool.setuptools.dynamic]
 version = {attr = "tutorplatformnotifications.__about__.__version__"}
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["tutorplatformnotifications*"]
