--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,41 +1,23 @@
 name: Release
 on:
-  pull_request:
-    types:
-      - closed
-    branches:
-      - main
+  release:
+    types: [published]
 
 jobs:
   release:
-    if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'bot/v')
+    name: Release to PyPI
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
     steps:
-      - uses: actions/checkout@v6
-      - name: Create tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: false
-          default_prerelease_bump: false
-      - name: Create a GitHub release
-        if: steps.tag_version.outputs.new_tag
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
       - name: Checkout
         uses: actions/checkout@v6
       - name: setup python
         uses: actions/setup-python@v6
         with:
           python-version: 3.9
-      - name: Install the package
-        run: pip install .
+      - name: Install build dependencies
+        run: pip install build
       - name: Build package
         run: python -m build
       - name: Publish to PyPI
